# local-camoufox

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  build.sh  docker-compose.yml  main.py  mise.toml  pyproject.toml  test_resolve.py
app/: __init__.py  auth.py  config.py  main.py  models.py
app/clients/: camoufox_client.py  markitdown_client.py
app/routers/: convert.py
app/services/: conversion_service.py
app/utils/: exceptions.py  validators.py
tests/: conftest.py  test_auth.py  test_conversion_service.py  test_convert_endpoint.py  test_health_endpoint.py
