[project]
name = "local-camoufox"
version = "0.1.0"
description = "FastAPI service that fetches webpages with Camoufox and converts them to Markdown."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloverlabs-camoufox>=0.6.0",
    "fastapi[standard]>=0.136.1",
    "markitdown",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
